--- a/index.xhtml
+++ b/index.xhtml
@@ -6,6 +6,6 @@
     </head>
     <body>
         <h1>The lack of time</h1>
-        <p>WHy am I always so late?</p>
+        <p>Why am I always so late?</p>
     </body>
 </html>
