--- a/index.xhtml
+++ b/index.xhtml
@@ -8,5 +8,6 @@
         <h1>The lack of time</h1>
         <p>Why am I always so late?</p>
         <p>I can make it!</p>
+<h2>Please help me!</h2>
     </body>
 </html>
